crates/squealy/tests/compile_fail/string_fn_operand_type_mismatch.rs
use squealy::*;
use squealy_test::TestConnection;

#[derive(Clone, Debug, PartialEq, Table)]
#[schema(Public)]
struct User<'scope, C: ColumnMode = ColumnExpr> {
    #[column(primary_key, auto_increment)]
    id: C::Type<'scope, i32>,
    name: C::Type<'scope, String>,
}

#[allow(dead_code)]
#[derive(Schema)]
struct Public {
    users: User<'static, ColumnName>,
}

fn main() {
    // String functions require a `String`-valued operand; an `i32` column does not type-check.
    let _query = TestConnection.from::<User>().select(|(user,)| lower(user.id));
}
