crates/squealy/tests/compile_fail/string_fn_operand_type_mismatch.stderr
error[E0271]: type mismatch resolving `<UserId as KindNullability>::Value == String`
  --> tests/compile_fail/string_fn_operand_type_mismatch.rs:20:71
   |
20 |     let _query = TestConnection.from::<User>().select(|(user,)| lower(user.id));
   |                                                                 ----- ^^^^^^^ type mismatch resolving `<UserId as KindNullability>::Value == String`
   |                                                                 |
   |                                                                 required by a bound introduced by this call
   |
note: expected this to be `std::string::String`
  --> tests/compile_fail/string_fn_operand_type_mismatch.rs:4:35
   |
 4 | #[derive(Clone, Debug, PartialEq, Table)]
   |                                   ^^^^^
note: required by a bound in `squealy::lower`
  --> $WORKSPACE/crates/squealy-core/src/expr.rs
   |
   | pub fn lower<'scope, E>(
   |        ----- required by a bound in this function
...
   |     E::Kind: KindNullability<Value = String>,
   |                              ^^^^^^^^^^^^^^ required by this bound in `lower`
   = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
